--- a/FluStudy/Base.lproj/Main.storyboard
+++ b/FluStudy/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="A0g-Mh-TyY">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,44 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Videos-->
+        <scene sceneID="vSY-Wn-51R">
+            <objects>
+                <viewController id="GHb-KB-dv9" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ecK-ma-aMo"/>
+                        <viewControllerLayoutGuide type="bottom" id="KKb-Hv-OJb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1NW-uz-EhR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Videos" id="J8p-Si-MW8"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5vF-kO-T5z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-494" y="345"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="QAU-IZ-gIE">
+            <objects>
+                <tabBarController id="A0g-Mh-TyY" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="KNb-oI-Oec">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="i7c-he-xLX"/>
+                        <segue destination="GHb-KB-dv9" kind="relationship" relationship="viewControllers" id="MoP-Yi-MvY"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OOo-SD-JeT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1446" y="18"/>
+        </scene>
+        <!--Flu Survey-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FluStudy" customModuleProvider="target" sceneMemberID="viewController">
@@ -38,19 +75,23 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="S2b-yx-6co" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="1Nq-bO-lA2"/>
-                            <constraint firstItem="S2b-yx-6co" firstAttribute="top" secondItem="Ahf-iG-IKQ" secondAttribute="bottom" constant="79.5" id="5iz-dR-dgK"/>
-                            <constraint firstItem="Ahf-iG-IKQ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="T8y-JH-cua"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="S2b-yx-6co" secondAttribute="bottom" constant="329" id="bRc-IM-GeZ"/>
-                            <constraint firstItem="Ahf-iG-IKQ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="177" id="e4e-cJ-JPB"/>
-                            <constraint firstItem="Ahf-iG-IKQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="usy-yl-RPC"/>
-                            <constraint firstItem="S2b-yx-6co" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="yZy-b1-RVt"/>
+                            <constraint firstItem="S2b-yx-6co" firstAttribute="top" secondItem="Ahf-iG-IKQ" secondAttribute="bottom" constant="79.5" id="Blg-qO-TXp"/>
+                            <constraint firstItem="Ahf-iG-IKQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Kd1-vv-l56"/>
+                            <constraint firstItem="S2b-yx-6co" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="kAW-oE-afH"/>
+                            <constraint firstItem="Ahf-iG-IKQ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="177" id="koc-4N-unm"/>
+                            <constraint firstItem="S2b-yx-6co" firstAttribute="top" secondItem="Ahf-iG-IKQ" secondAttribute="bottom" constant="79.5" id="oJ6-IK-xR4"/>
+                            <constraint firstItem="S2b-yx-6co" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="p9E-XU-X53"/>
+                            <constraint firstItem="Ahf-iG-IKQ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="wiv-dq-oeV"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Flu Survey" image="arrowLeft" id="gxk-NT-gtR"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
+            <point key="canvasLocation" x="-495" y="-420"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="arrowLeft" width="10" height="18"/>
+    </resources>
 </document>
