--- a/FluStudy/Base.lproj/Main.storyboard
+++ b/FluStudy/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,56 +23,98 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NQc-dC-hHx">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NQc-dC-hHx">
                                 <rect key="frame" x="66" y="57" width="243" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="0MJ-wL-8hC"/>
+                                    <constraint firstAttribute="width" secondItem="NQc-dC-hHx" secondAttribute="height" multiplier="243:128" id="D9a-Z9-QqZ"/>
+                                </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MC3-OD-8JR">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MC3-OD-8JR">
                                 <rect key="frame" x="66" y="260" width="243" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="MC3-OD-8JR" secondAttribute="height" multiplier="243:128" id="268-CB-0fC"/>
+                                    <constraint firstAttribute="height" constant="128" id="aA5-lC-7fa"/>
+                                </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5K5-XF-ROL">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5K5-XF-ROL">
                                 <rect key="frame" x="66" y="463" width="243" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="f31-5c-usi"/>
+                                    <constraint firstAttribute="width" secondItem="5K5-XF-ROL" secondAttribute="height" multiplier="243:128" id="iVT-eW-Iej"/>
+                                </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AeZ-16-agn">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AeZ-16-agn">
                                 <rect key="frame" x="151" y="193" width="73" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Play Video"/>
+                                <connections>
+                                    <action selector="firstVideoBtnPressed:" destination="GHb-KB-dv9" eventType="touchUpInside" id="oJU-dP-6t5"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z0r-mv-bHm">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z0r-mv-bHm">
                                 <rect key="frame" x="151" y="396" width="73" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Play Video"/>
+                                <connections>
+                                    <action selector="secondVideoBtnPressed:" destination="GHb-KB-dv9" eventType="touchUpInside" id="zvB-LV-Cyb"/>
+                                </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Protect Yourself, Protect Your Family" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CQX-ZU-9bG">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Protect Yourself, Protect Your Family" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CQX-ZU-9bG">
                                 <rect key="frame" x="16" y="28" width="343" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Who Needs a Flu Vaccine" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BWz-BG-8XX">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Who Needs a Flu Vaccine" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BWz-BG-8XX">
                                 <rect key="frame" x="16" y="231" width="343" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="I Never Get the Flu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJW-JU-2K3">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I Never Get the Flu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJW-JU-2K3">
                                 <rect key="frame" x="16" y="434" width="343" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HwU-m5-hLw">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HwU-m5-hLw">
                                 <rect key="frame" x="151" y="599" width="73" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Play Video"/>
+                                <connections>
+                                    <action selector="thirdVideoBtnPressed:" destination="GHb-KB-dv9" eventType="touchUpInside" id="bGk-CH-nIa"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MC3-OD-8JR" firstAttribute="top" secondItem="BWz-BG-8XX" secondAttribute="bottom" constant="8" id="212-k1-tec"/>
+                            <constraint firstItem="PJW-JU-2K3" firstAttribute="leading" secondItem="1NW-uz-EhR" secondAttribute="leadingMargin" id="4B5-U4-Y5s"/>
+                            <constraint firstItem="NQc-dC-hHx" firstAttribute="top" secondItem="CQX-ZU-9bG" secondAttribute="bottom" constant="8" id="656-cW-9ZC"/>
+                            <constraint firstItem="BWz-BG-8XX" firstAttribute="top" secondItem="AeZ-16-agn" secondAttribute="bottom" constant="8" id="6aX-rB-Eo2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Z0r-mv-bHm" secondAttribute="trailing" constant="135" id="7V3-tw-7k1"/>
+                            <constraint firstItem="AeZ-16-agn" firstAttribute="leading" secondItem="1NW-uz-EhR" secondAttribute="leadingMargin" constant="135" id="BLh-Im-GEK"/>
+                            <constraint firstItem="PJW-JU-2K3" firstAttribute="trailing" secondItem="1NW-uz-EhR" secondAttribute="trailingMargin" id="Cyi-9s-IKv"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="HwU-m5-hLw" secondAttribute="trailing" constant="135" id="La1-eZ-dkq"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="5K5-XF-ROL" secondAttribute="trailing" constant="50" id="OLd-UF-CHM"/>
+                            <constraint firstItem="AeZ-16-agn" firstAttribute="top" secondItem="NQc-dC-hHx" secondAttribute="bottom" constant="8" id="Rie-fi-hkH"/>
+                            <constraint firstItem="Z0r-mv-bHm" firstAttribute="top" secondItem="MC3-OD-8JR" secondAttribute="bottom" constant="8" id="Rkp-i9-4Wh"/>
+                            <constraint firstItem="CQX-ZU-9bG" firstAttribute="leading" secondItem="1NW-uz-EhR" secondAttribute="leadingMargin" id="U8j-JB-muC"/>
+                            <constraint firstItem="HwU-m5-hLw" firstAttribute="leading" secondItem="1NW-uz-EhR" secondAttribute="leadingMargin" constant="135" id="Wvb-UG-Ts1"/>
+                            <constraint firstItem="5K5-XF-ROL" firstAttribute="top" secondItem="PJW-JU-2K3" secondAttribute="bottom" constant="8" id="bH4-cQ-WyT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="NQc-dC-hHx" secondAttribute="trailing" constant="50" id="dze-xb-b3b"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MC3-OD-8JR" secondAttribute="trailing" constant="50" id="gQ0-wL-daY"/>
+                            <constraint firstItem="CQX-ZU-9bG" firstAttribute="trailing" secondItem="1NW-uz-EhR" secondAttribute="trailingMargin" id="gZM-Pu-9Ug"/>
+                            <constraint firstItem="NQc-dC-hHx" firstAttribute="leading" secondItem="1NW-uz-EhR" secondAttribute="leadingMargin" constant="50" id="h2q-ZI-5lz"/>
+                            <constraint firstItem="5K5-XF-ROL" firstAttribute="leading" secondItem="1NW-uz-EhR" secondAttribute="leadingMargin" constant="50" id="ipF-lH-dRI"/>
+                            <constraint firstItem="BWz-BG-8XX" firstAttribute="trailing" secondItem="1NW-uz-EhR" secondAttribute="trailingMargin" id="k9F-BO-tms"/>
+                            <constraint firstItem="Z0r-mv-bHm" firstAttribute="leading" secondItem="1NW-uz-EhR" secondAttribute="leadingMargin" constant="135" id="ljQ-lf-5Rh"/>
+                            <constraint firstItem="HwU-m5-hLw" firstAttribute="top" secondItem="5K5-XF-ROL" secondAttribute="bottom" constant="8" id="oBu-ja-bQB"/>
+                            <constraint firstItem="MC3-OD-8JR" firstAttribute="leading" secondItem="1NW-uz-EhR" secondAttribute="leadingMargin" constant="50" id="ot2-yi-wT6"/>
+                            <constraint firstItem="PJW-JU-2K3" firstAttribute="top" secondItem="Z0r-mv-bHm" secondAttribute="bottom" constant="8" id="pyl-sl-WSw"/>
+                            <constraint firstItem="CQX-ZU-9bG" firstAttribute="top" secondItem="ecK-ma-aMo" secondAttribute="bottom" constant="8" id="q1e-76-34O"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="AeZ-16-agn" secondAttribute="trailing" constant="135" id="qDK-gh-7uU"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="HwU-m5-hLw" secondAttribute="bottom" constant="38" id="tGB-G9-rBx"/>
+                            <constraint firstItem="BWz-BG-8XX" firstAttribute="leading" secondItem="1NW-uz-EhR" secondAttribute="leadingMargin" id="vwM-ug-j5u"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Videos" id="J8p-Si-MW8"/>
                     <connections>
@@ -83,6 +126,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5vF-kO-T5z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-495.19999999999999" y="344.97751124437787"/>
+        </scene>
+        <!--AV Player View Controller-->
+        <scene sceneID="Fe3-hN-H2t">
+            <objects>
+                <avPlayerViewController videoGravity="AVLayerVideoGravityResizeAspect" id="5x7-pI-SAg" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hh5-PS-dWQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="132" y="342"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="QAU-IZ-gIE">
